// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div>
  total: 
  $2.35
</div>
`;

exports[`should correctly render ExpensesSummary with multiple expenses 1`] = `
<div>
  total: 
  $235,878.76
</div>
`;
